
[TestPrintTableResults_LongTerminalWidth_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages,_no_license_violations - 1]

---

[TestPrintTableResults_LongTerminalWidth_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages,_some_license_violations - 1]
╭───────────────────┬───────────┬─────────┬─────────┬────────────────────────────╮
│ LICENSE VIOLATION │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                     │
├───────────────────┼───────────┼─────────┼─────────┼────────────────────────────┤
│[0;100m MIT               [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/first/lockfile  [0m│
│[0;40m Apache-2.0        [0m│[0;40m npm       [0m│[0;40m mine2   [0m│[0;40m 3.2.5   [0m│[0;40m path/to/my/second/lockfile [0m│
│[0;100m MIT               [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/third/lockfile  [0m│
╰───────────────────┴───────────┴─────────┴─────────┴────────────────────────────╯

---

[TestPrintTableResults_LongTerminalWidth_WithLicenseViolations/multiple_sources_with_no_packages - 1]

---

[TestPrintTableResults_LongTerminalWidth_WithLicenseViolations/no_sources - 1]

---

[TestPrintTableResults_LongTerminalWidth_WithLicenseViolations/one_source_with_no_packages - 1]

---

[TestPrintTableResults_LongTerminalWidth_WithLicenseViolations/one_source_with_one_package,_no_license_violations - 1]

---

[TestPrintTableResults_LongTerminalWidth_WithLicenseViolations/one_source_with_one_package_and_multiple_license_violations - 1]
╭───────────────────┬───────────┬─────────┬─────────┬───────────────────────────╮
│ LICENSE VIOLATION │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                    │
├───────────────────┼───────────┼─────────┼─────────┼───────────────────────────┤
│[0;100m MIT, Apache-2.0   [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/first/lockfile [0m│
╰───────────────────┴───────────┴─────────┴─────────┴───────────────────────────╯

---

[TestPrintTableResults_LongTerminalWidth_WithLicenseViolations/one_source_with_one_package_and_one_license_violation - 1]
╭───────────────────┬───────────┬─────────┬─────────┬───────────────────────────╮
│ LICENSE VIOLATION │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                    │
├───────────────────┼───────────┼─────────┼─────────┼───────────────────────────┤
│[0;100m MIT               [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/first/lockfile [0m│
╰───────────────────┴───────────┴─────────┴─────────┴───────────────────────────╯

---

[TestPrintTableResults_LongTerminalWidth_WithLicenseViolations/two_sources_with_packages,_one_license_violation - 1]
╭───────────────────┬───────────┬─────────┬─────────┬───────────────────────────╮
│ LICENSE VIOLATION │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                    │
├───────────────────┼───────────┼─────────┼─────────┼───────────────────────────┤
│[0;100m MIT               [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/first/lockfile [0m│
╰───────────────────┴───────────┴─────────┴─────────┴───────────────────────────╯

---

[TestPrintTableResults_LongTerminalWidth_WithMixedIssues/multiple_sources_with_a_mixed_count_of_packages,_some_vulnerabilities_and_license_violations - 1]
╭───────────────────────┬──────┬───────────┬─────────┬─────────┬────────────────────────────╮
│ OSV URL               │ CVSS │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                     │
├───────────────────────┼──────┼───────────┼─────────┼─────────┼────────────────────────────┤
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/first/lockfile  [0m│
│[0;40m https://osv.dev/[1mOSV-2[0m[0;40m [0m│[0;40m      [0m│[0;40m npm       [0m│[0;40m mine2   [0m│[0;40m 3.2.5   [0m│[0;40m path/to/my/second/lockfile [0m│
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/third/lockfile  [0m│
╰───────────────────────┴──────┴───────────┴─────────┴─────────┴────────────────────────────╯
╭───────────────────┬───────────┬─────────┬─────────┬───────────────────────────╮
│ LICENSE VIOLATION │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                    │
├───────────────────┼───────────┼─────────┼─────────┼───────────────────────────┤
│[0;100m MIT               [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/first/lockfile [0m│
│[0;40m MIT               [0m│[0;40m npm       [0m│[0;40m mine1   [0m│[0;40m 1.3.5   [0m│[0;40m path/to/my/third/lockfile [0m│
│[0;100m Apache-2.0        [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/third/lockfile [0m│
╰───────────────────┴───────────┴─────────┴─────────┴───────────────────────────╯

---

[TestPrintTableResults_LongTerminalWidth_WithMixedIssues/one_source_with_one_package,_one_vulnerability,_and_one_license_violation - 1]
╭───────────────────────┬──────┬───────────┬─────────┬─────────┬───────────────────────────╮
│ OSV URL               │ CVSS │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                    │
├───────────────────────┼──────┼───────────┼─────────┼─────────┼───────────────────────────┤
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/first/lockfile [0m│
╰───────────────────────┴──────┴───────────┴─────────┴─────────┴───────────────────────────╯
╭───────────────────┬───────────┬─────────┬─────────┬───────────────────────────╮
│ LICENSE VIOLATION │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                    │
├───────────────────┼───────────┼─────────┼─────────┼───────────────────────────┤
│[0;100m MIT               [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/first/lockfile [0m│
╰───────────────────┴───────────┴─────────┴─────────┴───────────────────────────╯

---

[TestPrintTableResults_LongTerminalWidth_WithMixedIssues/two_sources_with_packages,_one_vulnerability,_one_license_violation - 1]
╭───────────────────────┬──────┬───────────┬─────────┬─────────┬───────────────────────────╮
│ OSV URL               │ CVSS │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                    │
├───────────────────────┼──────┼───────────┼─────────┼─────────┼───────────────────────────┤
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/first/lockfile [0m│
╰───────────────────────┴──────┴───────────┴─────────┴─────────┴───────────────────────────╯
╭───────────────────┬───────────┬─────────┬─────────┬────────────────────────────╮
│ LICENSE VIOLATION │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                     │
├───────────────────┼───────────┼─────────┼─────────┼────────────────────────────┤
│[0;100m MIT               [0m│[0;100m npm       [0m│[0;100m mine2   [0m│[0;100m 5.9.0   [0m│[0;100m path/to/my/second/lockfile [0m│
╰───────────────────┴───────────┴─────────┴─────────┴────────────────────────────╯

---

[TestPrintTableResults_LongTerminalWidth_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_and_multiple_vulnerabilities - 1]
╭───────────────────────┬──────┬───────────┬─────────┬─────────┬────────────────────────────╮
│ OSV URL               │ CVSS │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                     │
├───────────────────────┼──────┼───────────┼─────────┼─────────┼────────────────────────────┤
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/first/lockfile  [0m│
│[0;40m https://osv.dev/[1mOSV-5[0m[0;40m [0m│[0;40m      [0m│[0;40m npm       [0m│[0;40m mine1   [0m│[0;40m 1.2.3   [0m│[0;40m path/to/my/first/lockfile  [0m│
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.2   [0m│[0;100m path/to/my/first/lockfile  [0m│
│[0;40m https://osv.dev/[1mOSV-2[0m[0;40m [0m│[0;40m      [0m│[0;40m npm       [0m│[0;40m mine2   [0m│[0;40m 3.2.5   [0m│[0;40m path/to/my/second/lockfile [0m│
│[0;100m https://osv.dev/[1mOSV-3[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine3   [0m│[0;100m 0.4.1   [0m│[0;100m path/to/my/second/lockfile [0m│
│[0;40m https://osv.dev/[1mOSV-5[0m[0;40m [0m│[0;40m      [0m│[0;40m npm       [0m│[0;40m mine3   [0m│[0;40m 0.4.1   [0m│[0;40m path/to/my/second/lockfile [0m│
╰───────────────────────┴──────┴───────────┴─────────┴─────────┴────────────────────────────╯

---

[TestPrintTableResults_LongTerminalWidth_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_no_vulnerabilities - 1]

---

[TestPrintTableResults_LongTerminalWidth_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_some_vulnerabilities - 1]
╭───────────────────────┬──────┬───────────┬─────────┬─────────┬────────────────────────────╮
│ OSV URL               │ CVSS │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                     │
├───────────────────────┼──────┼───────────┼─────────┼─────────┼────────────────────────────┤
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/first/lockfile  [0m│
│[0;40m https://osv.dev/[1mOSV-2[0m[0;40m [0m│[0;40m      [0m│[0;40m npm       [0m│[0;40m mine2   [0m│[0;40m 3.2.5   [0m│[0;40m path/to/my/second/lockfile [0m│
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/third/lockfile  [0m│
╰───────────────────────┴──────┴───────────┴─────────┴─────────┴────────────────────────────╯

---

[TestPrintTableResults_LongTerminalWidth_WithVulnerabilities/multiple_sources_with_no_packages - 1]

---

[TestPrintTableResults_LongTerminalWidth_WithVulnerabilities/no_sources - 1]

---

[TestPrintTableResults_LongTerminalWidth_WithVulnerabilities/one_source_with_no_packages - 1]

---

[TestPrintTableResults_LongTerminalWidth_WithVulnerabilities/one_source_with_one_package,_no_vulnerabilities - 1]

---

[TestPrintTableResults_LongTerminalWidth_WithVulnerabilities/one_source_with_one_package_and_one_vulnerability - 1]
╭───────────────────────┬──────┬───────────┬─────────┬─────────┬───────────────────────────╮
│ OSV URL               │ CVSS │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                    │
├───────────────────────┼──────┼───────────┼─────────┼─────────┼───────────────────────────┤
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/first/lockfile [0m│
╰───────────────────────┴──────┴───────────┴─────────┴─────────┴───────────────────────────╯

---

[TestPrintTableResults_LongTerminalWidth_WithVulnerabilities/one_source_with_one_package_and_two_aliases_of_a_single_vulnerability - 1]
╭──────────────────────────┬──────┬───────────┬─────────┬─────────┬───────────────────────────╮
│ OSV URL                  │ CVSS │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                    │
├──────────────────────────┼──────┼───────────┼─────────┼─────────┼───────────────────────────┤
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m    [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/first/lockfile [0m│
│[0;100m https://osv.dev/[1mGHSA-123[0m[0;100m [0m│[0;100m      [0m│[0;100m           [0m│[0;100m         [0m│[0;100m         [0m│[0;100m                           [0m│
╰──────────────────────────┴──────┴───────────┴─────────┴─────────┴───────────────────────────╯

---

[TestPrintTableResults_LongTerminalWidth_WithVulnerabilities/one_source_with_vulnerabilities,_some_missing_content - 1]
╭───────────────────────┬──────┬───────────┬─────────┬───────────┬───────────────────────────╮
│ OSV URL               │ CVSS │ ECOSYSTEM │ PACKAGE │ VERSION   │ SOURCE                    │
├───────────────────────┼──────┼───────────┼─────────┼───────────┼───────────────────────────┤
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3     [0m│[0;100m path/to/my/first/lockfile [0m│
│[0;40m https://osv.dev/[1mOSV-2[0m[0;40m [0m│[0;40m      [0m│[0;40m npm       [0m│[0;40m mine3   [0m│[0;40m 0.10.2-rc [0m│[0;40m path/to/my/first/lockfile [0m│
╰───────────────────────┴──────┴───────────┴─────────┴───────────┴───────────────────────────╯

---

[TestPrintTableResults_LongTerminalWidth_WithVulnerabilities/two_sources_with_packages,_one_vulnerability - 1]
╭───────────────────────┬──────┬───────────┬─────────┬─────────┬───────────────────────────╮
│ OSV URL               │ CVSS │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                    │
├───────────────────────┼──────┼───────────┼─────────┼─────────┼───────────────────────────┤
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/first/lockfile [0m│
╰───────────────────────┴──────┴───────────┴─────────┴─────────┴───────────────────────────╯

---

[TestPrintTableResults_NoTerminalWidth_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages,_no_license_violations - 1]

---

[TestPrintTableResults_NoTerminalWidth_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages,_some_license_violations - 1]
+-------------------+-----------+---------+---------+----------------------------+
| LICENSE VIOLATION | ECOSYSTEM | PACKAGE | VERSION | SOURCE                     |
+-------------------+-----------+---------+---------+----------------------------+
| MIT               | npm       | mine1   | 1.2.3   | path/to/my/first/lockfile  |
| Apache-2.0        | npm       | mine2   | 3.2.5   | path/to/my/second/lockfile |
| MIT               | npm       | mine1   | 1.2.3   | path/to/my/third/lockfile  |
+-------------------+-----------+---------+---------+----------------------------+

---

[TestPrintTableResults_NoTerminalWidth_WithLicenseViolations/multiple_sources_with_no_packages - 1]

---

[TestPrintTableResults_NoTerminalWidth_WithLicenseViolations/no_sources - 1]

---

[TestPrintTableResults_NoTerminalWidth_WithLicenseViolations/one_source_with_no_packages - 1]

---

[TestPrintTableResults_NoTerminalWidth_WithLicenseViolations/one_source_with_one_package,_no_license_violations - 1]

---

[TestPrintTableResults_NoTerminalWidth_WithLicenseViolations/one_source_with_one_package_and_multiple_license_violations - 1]
+-------------------+-----------+---------+---------+---------------------------+
| LICENSE VIOLATION | ECOSYSTEM | PACKAGE | VERSION | SOURCE                    |
+-------------------+-----------+---------+---------+---------------------------+
| MIT, Apache-2.0   | npm       | mine1   | 1.2.3   | path/to/my/first/lockfile |
+-------------------+-----------+---------+---------+---------------------------+

---

[TestPrintTableResults_NoTerminalWidth_WithLicenseViolations/one_source_with_one_package_and_one_license_violation - 1]
+-------------------+-----------+---------+---------+---------------------------+
| LICENSE VIOLATION | ECOSYSTEM | PACKAGE | VERSION | SOURCE                    |
+-------------------+-----------+---------+---------+---------------------------+
| MIT               | npm       | mine1   | 1.2.3   | path/to/my/first/lockfile |
+-------------------+-----------+---------+---------+---------------------------+

---

[TestPrintTableResults_NoTerminalWidth_WithLicenseViolations/two_sources_with_packages,_one_license_violation - 1]
+-------------------+-----------+---------+---------+---------------------------+
| LICENSE VIOLATION | ECOSYSTEM | PACKAGE | VERSION | SOURCE                    |
+-------------------+-----------+---------+---------+---------------------------+
| MIT               | npm       | mine1   | 1.2.3   | path/to/my/first/lockfile |
+-------------------+-----------+---------+---------+---------------------------+

---

[TestPrintTableResults_NoTerminalWidth_WithMixedIssues/multiple_sources_with_a_mixed_count_of_packages,_some_vulnerabilities_and_license_violations - 1]
+-----------------------+------+-----------+---------+---------+----------------------------+
| OSV URL               | CVSS | ECOSYSTEM | PACKAGE | VERSION | SOURCE                     |
+-----------------------+------+-----------+---------+---------+----------------------------+
| https://osv.dev/OSV-1 |      | npm       | mine1   | 1.2.3   | path/to/my/first/lockfile  |
| https://osv.dev/OSV-2 |      | npm       | mine2   | 3.2.5   | path/to/my/second/lockfile |
| https://osv.dev/OSV-1 |      | npm       | mine1   | 1.2.3   | path/to/my/third/lockfile  |
+-----------------------+------+-----------+---------+---------+----------------------------+
+-------------------+-----------+---------+---------+---------------------------+
| LICENSE VIOLATION | ECOSYSTEM | PACKAGE | VERSION | SOURCE                    |
+-------------------+-----------+---------+---------+---------------------------+
| MIT               | npm       | mine1   | 1.2.3   | path/to/my/first/lockfile |
| MIT               | npm       | mine1   | 1.3.5   | path/to/my/third/lockfile |
| Apache-2.0        | npm       | mine1   | 1.2.3   | path/to/my/third/lockfile |
+-------------------+-----------+---------+---------+---------------------------+

---

[TestPrintTableResults_NoTerminalWidth_WithMixedIssues/one_source_with_one_package,_one_vulnerability,_and_one_license_violation - 1]
+-----------------------+------+-----------+---------+---------+---------------------------+
| OSV URL               | CVSS | ECOSYSTEM | PACKAGE | VERSION | SOURCE                    |
+-----------------------+------+-----------+---------+---------+---------------------------+
| https://osv.dev/OSV-1 |      | npm       | mine1   | 1.2.3   | path/to/my/first/lockfile |
+-----------------------+------+-----------+---------+---------+---------------------------+
+-------------------+-----------+---------+---------+---------------------------+
| LICENSE VIOLATION | ECOSYSTEM | PACKAGE | VERSION | SOURCE                    |
+-------------------+-----------+---------+---------+---------------------------+
| MIT               | npm       | mine1   | 1.2.3   | path/to/my/first/lockfile |
+-------------------+-----------+---------+---------+---------------------------+

---

[TestPrintTableResults_NoTerminalWidth_WithMixedIssues/two_sources_with_packages,_one_vulnerability,_one_license_violation - 1]
+-----------------------+------+-----------+---------+---------+---------------------------+
| OSV URL               | CVSS | ECOSYSTEM | PACKAGE | VERSION | SOURCE                    |
+-----------------------+------+-----------+---------+---------+---------------------------+
| https://osv.dev/OSV-1 |      | npm       | mine1   | 1.2.3   | path/to/my/first/lockfile |
+-----------------------+------+-----------+---------+---------+---------------------------+
+-------------------+-----------+---------+---------+----------------------------+
| LICENSE VIOLATION | ECOSYSTEM | PACKAGE | VERSION | SOURCE                     |
+-------------------+-----------+---------+---------+----------------------------+
| MIT               | npm       | mine2   | 5.9.0   | path/to/my/second/lockfile |
+-------------------+-----------+---------+---------+----------------------------+

---

[TestPrintTableResults_NoTerminalWidth_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_and_multiple_vulnerabilities - 1]
+-----------------------+------+-----------+---------+---------+----------------------------+
| OSV URL               | CVSS | ECOSYSTEM | PACKAGE | VERSION | SOURCE                     |
+-----------------------+------+-----------+---------+---------+----------------------------+
| https://osv.dev/OSV-1 |      | npm       | mine1   | 1.2.3   | path/to/my/first/lockfile  |
| https://osv.dev/OSV-5 |      | npm       | mine1   | 1.2.3   | path/to/my/first/lockfile  |
| https://osv.dev/OSV-1 |      | npm       | mine1   | 1.2.2   | path/to/my/first/lockfile  |
| https://osv.dev/OSV-2 |      | npm       | mine2   | 3.2.5   | path/to/my/second/lockfile |
| https://osv.dev/OSV-3 |      | npm       | mine3   | 0.4.1   | path/to/my/second/lockfile |
| https://osv.dev/OSV-5 |      | npm       | mine3   | 0.4.1   | path/to/my/second/lockfile |
+-----------------------+------+-----------+---------+---------+----------------------------+

---

[TestPrintTableResults_NoTerminalWidth_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_no_vulnerabilities - 1]

---

[TestPrintTableResults_NoTerminalWidth_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_some_vulnerabilities - 1]
+-----------------------+------+-----------+---------+---------+----------------------------+
| OSV URL               | CVSS | ECOSYSTEM | PACKAGE | VERSION | SOURCE                     |
+-----------------------+------+-----------+---------+---------+----------------------------+
| https://osv.dev/OSV-1 |      | npm       | mine1   | 1.2.3   | path/to/my/first/lockfile  |
| https://osv.dev/OSV-2 |      | npm       | mine2   | 3.2.5   | path/to/my/second/lockfile |
| https://osv.dev/OSV-1 |      | npm       | mine1   | 1.2.3   | path/to/my/third/lockfile  |
+-----------------------+------+-----------+---------+---------+----------------------------+

---

[TestPrintTableResults_NoTerminalWidth_WithVulnerabilities/multiple_sources_with_no_packages - 1]

---

[TestPrintTableResults_NoTerminalWidth_WithVulnerabilities/no_sources - 1]

---

[TestPrintTableResults_NoTerminalWidth_WithVulnerabilities/one_source_with_no_packages - 1]

---

[TestPrintTableResults_NoTerminalWidth_WithVulnerabilities/one_source_with_one_package,_no_vulnerabilities - 1]

---

[TestPrintTableResults_NoTerminalWidth_WithVulnerabilities/one_source_with_one_package_and_one_vulnerability - 1]
+-----------------------+------+-----------+---------+---------+---------------------------+
| OSV URL               | CVSS | ECOSYSTEM | PACKAGE | VERSION | SOURCE                    |
+-----------------------+------+-----------+---------+---------+---------------------------+
| https://osv.dev/OSV-1 |      | npm       | mine1   | 1.2.3   | path/to/my/first/lockfile |
+-----------------------+------+-----------+---------+---------+---------------------------+

---

[TestPrintTableResults_NoTerminalWidth_WithVulnerabilities/one_source_with_one_package_and_two_aliases_of_a_single_vulnerability - 1]
+--------------------------+------+-----------+---------+---------+---------------------------+
| OSV URL                  | CVSS | ECOSYSTEM | PACKAGE | VERSION | SOURCE                    |
+--------------------------+------+-----------+---------+---------+---------------------------+
| https://osv.dev/OSV-1    |      | npm       | mine1   | 1.2.3   | path/to/my/first/lockfile |
| https://osv.dev/GHSA-123 |      |           |         |         |                           |
+--------------------------+------+-----------+---------+---------+---------------------------+

---

[TestPrintTableResults_NoTerminalWidth_WithVulnerabilities/one_source_with_vulnerabilities,_some_missing_content - 1]
+-----------------------+------+-----------+---------+-----------+---------------------------+
| OSV URL               | CVSS | ECOSYSTEM | PACKAGE | VERSION   | SOURCE                    |
+-----------------------+------+-----------+---------+-----------+---------------------------+
| https://osv.dev/OSV-1 |      | npm       | mine1   | 1.2.3     | path/to/my/first/lockfile |
| https://osv.dev/OSV-2 |      | npm       | mine3   | 0.10.2-rc | path/to/my/first/lockfile |
+-----------------------+------+-----------+---------+-----------+---------------------------+

---

[TestPrintTableResults_NoTerminalWidth_WithVulnerabilities/two_sources_with_packages,_one_vulnerability - 1]
+-----------------------+------+-----------+---------+---------+---------------------------+
| OSV URL               | CVSS | ECOSYSTEM | PACKAGE | VERSION | SOURCE                    |
+-----------------------+------+-----------+---------+---------+---------------------------+
| https://osv.dev/OSV-1 |      | npm       | mine1   | 1.2.3   | path/to/my/first/lockfile |
+-----------------------+------+-----------+---------+---------+---------------------------+

---

[TestPrintTableResults_StandardTerminalWidth_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages,_no_license_violations - 1]

---

[TestPrintTableResults_StandardTerminalWidth_WithLicenseViolations/multiple_sources_with_a_mixed_count_of_packages,_some_license_violations - 1]
╭───────────────────┬───────────┬─────────┬─────────┬───────────────────────── ≈
│ LICENSE VIOLATION │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                   ≈
├───────────────────┼───────────┼─────────┼─────────┼───────────────────────── ≈
│[0;100m MIT               [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/first/lockfil[0m ≈
│[0;40m Apache-2.0        [0m│[0;40m npm       [0m│[0;40m mine2   [0m│[0;40m 3.2.5   [0m│[0;40m path/to/my/second/lockfi[0m ≈
│[0;100m MIT               [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/third/lockfil[0m ≈
╰───────────────────┴───────────┴─────────┴─────────┴───────────────────────── ≈

---

[TestPrintTableResults_StandardTerminalWidth_WithLicenseViolations/multiple_sources_with_no_packages - 1]

---

[TestPrintTableResults_StandardTerminalWidth_WithLicenseViolations/no_sources - 1]

---

[TestPrintTableResults_StandardTerminalWidth_WithLicenseViolations/one_source_with_no_packages - 1]

---

[TestPrintTableResults_StandardTerminalWidth_WithLicenseViolations/one_source_with_one_package,_no_license_violations - 1]

---

[TestPrintTableResults_StandardTerminalWidth_WithLicenseViolations/one_source_with_one_package_and_multiple_license_violations - 1]
╭───────────────────┬───────────┬─────────┬─────────┬───────────────────────── ≈
│ LICENSE VIOLATION │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                   ≈
├───────────────────┼───────────┼─────────┼─────────┼───────────────────────── ≈
│[0;100m MIT, Apache-2.0   [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/first/lockfil[0m ≈
╰───────────────────┴───────────┴─────────┴─────────┴───────────────────────── ≈

---

[TestPrintTableResults_StandardTerminalWidth_WithLicenseViolations/one_source_with_one_package_and_one_license_violation - 1]
╭───────────────────┬───────────┬─────────┬─────────┬───────────────────────── ≈
│ LICENSE VIOLATION │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                   ≈
├───────────────────┼───────────┼─────────┼─────────┼───────────────────────── ≈
│[0;100m MIT               [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/first/lockfil[0m ≈
╰───────────────────┴───────────┴─────────┴─────────┴───────────────────────── ≈

---

[TestPrintTableResults_StandardTerminalWidth_WithLicenseViolations/two_sources_with_packages,_one_license_violation - 1]
╭───────────────────┬───────────┬─────────┬─────────┬───────────────────────── ≈
│ LICENSE VIOLATION │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                   ≈
├───────────────────┼───────────┼─────────┼─────────┼───────────────────────── ≈
│[0;100m MIT               [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/first/lockfil[0m ≈
╰───────────────────┴───────────┴─────────┴─────────┴───────────────────────── ≈

---

[TestPrintTableResults_StandardTerminalWidth_WithMixedIssues/multiple_sources_with_a_mixed_count_of_packages,_some_vulnerabilities_and_license_violations - 1]
╭───────────────────────┬──────┬───────────┬─────────┬─────────┬────────────── ≈
│ OSV URL               │ CVSS │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE        ≈
├───────────────────────┼──────┼───────────┼─────────┼─────────┼────────────── ≈
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/fi[0m ≈
│[0;40m https://osv.dev/[1mOSV-2[0m[0;40m [0m│[0;40m      [0m│[0;40m npm       [0m│[0;40m mine2   [0m│[0;40m 3.2.5   [0m│[0;40m path/to/my/se[0m ≈
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/th[0m ≈
╰───────────────────────┴──────┴───────────┴─────────┴─────────┴────────────── ≈
╭───────────────────┬───────────┬─────────┬─────────┬───────────────────────── ≈
│ LICENSE VIOLATION │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                   ≈
├───────────────────┼───────────┼─────────┼─────────┼───────────────────────── ≈
│[0;100m MIT               [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/first/lockfil[0m ≈
│[0;40m MIT               [0m│[0;40m npm       [0m│[0;40m mine1   [0m│[0;40m 1.3.5   [0m│[0;40m path/to/my/third/lockfil[0m ≈
│[0;100m Apache-2.0        [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/third/lockfil[0m ≈
╰───────────────────┴───────────┴─────────┴─────────┴───────────────────────── ≈

---

[TestPrintTableResults_StandardTerminalWidth_WithMixedIssues/one_source_with_one_package,_one_vulnerability,_and_one_license_violation - 1]
╭───────────────────────┬──────┬───────────┬─────────┬─────────┬────────────── ≈
│ OSV URL               │ CVSS │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE        ≈
├───────────────────────┼──────┼───────────┼─────────┼─────────┼────────────── ≈
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/fi[0m ≈
╰───────────────────────┴──────┴───────────┴─────────┴─────────┴────────────── ≈
╭───────────────────┬───────────┬─────────┬─────────┬───────────────────────── ≈
│ LICENSE VIOLATION │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                   ≈
├───────────────────┼───────────┼─────────┼─────────┼───────────────────────── ≈
│[0;100m MIT               [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/first/lockfil[0m ≈
╰───────────────────┴───────────┴─────────┴─────────┴───────────────────────── ≈

---

[TestPrintTableResults_StandardTerminalWidth_WithMixedIssues/two_sources_with_packages,_one_vulnerability,_one_license_violation - 1]
╭───────────────────────┬──────┬───────────┬─────────┬─────────┬────────────── ≈
│ OSV URL               │ CVSS │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE        ≈
├───────────────────────┼──────┼───────────┼─────────┼─────────┼────────────── ≈
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/fi[0m ≈
╰───────────────────────┴──────┴───────────┴─────────┴─────────┴────────────── ≈
╭───────────────────┬───────────┬─────────┬─────────┬───────────────────────── ≈
│ LICENSE VIOLATION │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE                   ≈
├───────────────────┼───────────┼─────────┼─────────┼───────────────────────── ≈
│[0;100m MIT               [0m│[0;100m npm       [0m│[0;100m mine2   [0m│[0;100m 5.9.0   [0m│[0;100m path/to/my/second/lockfi[0m ≈
╰───────────────────┴───────────┴─────────┴─────────┴───────────────────────── ≈

---

[TestPrintTableResults_StandardTerminalWidth_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_and_multiple_vulnerabilities - 1]
╭───────────────────────┬──────┬───────────┬─────────┬─────────┬────────────── ≈
│ OSV URL               │ CVSS │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE        ≈
├───────────────────────┼──────┼───────────┼─────────┼─────────┼────────────── ≈
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/fi[0m ≈
│[0;40m https://osv.dev/[1mOSV-5[0m[0;40m [0m│[0;40m      [0m│[0;40m npm       [0m│[0;40m mine1   [0m│[0;40m 1.2.3   [0m│[0;40m path/to/my/fi[0m ≈
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.2   [0m│[0;100m path/to/my/fi[0m ≈
│[0;40m https://osv.dev/[1mOSV-2[0m[0;40m [0m│[0;40m      [0m│[0;40m npm       [0m│[0;40m mine2   [0m│[0;40m 3.2.5   [0m│[0;40m path/to/my/se[0m ≈
│[0;100m https://osv.dev/[1mOSV-3[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine3   [0m│[0;100m 0.4.1   [0m│[0;100m path/to/my/se[0m ≈
│[0;40m https://osv.dev/[1mOSV-5[0m[0;40m [0m│[0;40m      [0m│[0;40m npm       [0m│[0;40m mine3   [0m│[0;40m 0.4.1   [0m│[0;40m path/to/my/se[0m ≈
╰───────────────────────┴──────┴───────────┴─────────┴─────────┴────────────── ≈

---

[TestPrintTableResults_StandardTerminalWidth_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_no_vulnerabilities - 1]

---

[TestPrintTableResults_StandardTerminalWidth_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_some_vulnerabilities - 1]
╭───────────────────────┬──────┬───────────┬─────────┬─────────┬────────────── ≈
│ OSV URL               │ CVSS │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE        ≈
├───────────────────────┼──────┼───────────┼─────────┼─────────┼────────────── ≈
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/fi[0m ≈
│[0;40m https://osv.dev/[1mOSV-2[0m[0;40m [0m│[0;40m      [0m│[0;40m npm       [0m│[0;40m mine2   [0m│[0;40m 3.2.5   [0m│[0;40m path/to/my/se[0m ≈
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/th[0m ≈
╰───────────────────────┴──────┴───────────┴─────────┴─────────┴────────────── ≈

---

[TestPrintTableResults_StandardTerminalWidth_WithVulnerabilities/multiple_sources_with_no_packages - 1]

---

[TestPrintTableResults_StandardTerminalWidth_WithVulnerabilities/no_sources - 1]

---

[TestPrintTableResults_StandardTerminalWidth_WithVulnerabilities/one_source_with_no_packages - 1]

---

[TestPrintTableResults_StandardTerminalWidth_WithVulnerabilities/one_source_with_one_package,_no_vulnerabilities - 1]

---

[TestPrintTableResults_StandardTerminalWidth_WithVulnerabilities/one_source_with_one_package_and_one_vulnerability - 1]
╭───────────────────────┬──────┬───────────┬─────────┬─────────┬────────────── ≈
│ OSV URL               │ CVSS │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE        ≈
├───────────────────────┼──────┼───────────┼─────────┼─────────┼────────────── ≈
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/fi[0m ≈
╰───────────────────────┴──────┴───────────┴─────────┴─────────┴────────────── ≈

---

[TestPrintTableResults_StandardTerminalWidth_WithVulnerabilities/one_source_with_one_package_and_two_aliases_of_a_single_vulnerability - 1]
╭──────────────────────────┬──────┬───────────┬─────────┬─────────┬─────────── ≈
│ OSV URL                  │ CVSS │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE     ≈
├──────────────────────────┼──────┼───────────┼─────────┼─────────┼─────────── ≈
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m    [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my[0m ≈
│[0;100m https://osv.dev/[1mGHSA-123[0m[0;100m [0m│[0;100m      [0m│[0;100m           [0m│[0;100m         [0m│[0;100m         [0m│[0;100m           [0m ≈
╰──────────────────────────┴──────┴───────────┴─────────┴─────────┴─────────── ≈

---

[TestPrintTableResults_StandardTerminalWidth_WithVulnerabilities/one_source_with_vulnerabilities,_some_missing_content - 1]
╭───────────────────────┬──────┬───────────┬─────────┬───────────┬──────────── ≈
│ OSV URL               │ CVSS │ ECOSYSTEM │ PACKAGE │ VERSION   │ SOURCE      ≈
├───────────────────────┼──────┼───────────┼─────────┼───────────┼──────────── ≈
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3     [0m│[0;100m path/to/my/[0m ≈
│[0;40m https://osv.dev/[1mOSV-2[0m[0;40m [0m│[0;40m      [0m│[0;40m npm       [0m│[0;40m mine3   [0m│[0;40m 0.10.2-rc [0m│[0;40m path/to/my/[0m ≈
╰───────────────────────┴──────┴───────────┴─────────┴───────────┴──────────── ≈

---

[TestPrintTableResults_StandardTerminalWidth_WithVulnerabilities/two_sources_with_packages,_one_vulnerability - 1]
╭───────────────────────┬──────┬───────────┬─────────┬─────────┬────────────── ≈
│ OSV URL               │ CVSS │ ECOSYSTEM │ PACKAGE │ VERSION │ SOURCE        ≈
├───────────────────────┼──────┼───────────┼─────────┼─────────┼────────────── ≈
│[0;100m https://osv.dev/[1mOSV-1[0m[0;100m [0m│[0;100m      [0m│[0;100m npm       [0m│[0;100m mine1   [0m│[0;100m 1.2.3   [0m│[0;100m path/to/my/fi[0m ≈
╰───────────────────────┴──────┴───────────┴─────────┴─────────┴────────────── ≈

---
